Added 5 more answers

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 # ignore Git Commands Cheat Sheet.htm
 Git Commands Cheat Sheet.htm
 SQL CookBook Datasets.sql
+SQL CookBook - Chapter 1.ipynb
+SQL CookBook Datasets.sql
