--- a/w3resource-SQL-Practice/_toc.yml
+++ b/w3resource-SQL-Practice/_toc.yml
@@ -1,4 +1,4 @@
 - title: README
   file: /README
-- title:  Questions_1-20
-  file: /Questions_1-20
+- title:  SQL Exercises & Solutions
+  file: /SQL Exercises & Solutions
